fix(accordion): accordion overflow fix.

--- a/packages/assets/css/src/scss/_components/_accordion/_accordion-elements/_build-item.scss
+++ b/packages/assets/css/src/scss/_components/_accordion/_accordion-elements/_build-item.scss
@@ -55,6 +55,7 @@
 						.sui-box-group {
 							padding-top: $spacing-xl;
 							padding-bottom: $spacing-xl;
+							border-top: $border-width-sm solid $color-extended-neutral-80;
 						}
 					}
 				}
